--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,69 @@
 .App {
+  background-color: #363636;
+  color: #f5f5f5;
+  height: 130px;
+  text-align: center;
+  width: 100%;
+}
+
+.AppHeader{
+  border-top: 5px solid #f5f5f5;
+  border-bottom: 5px solid #f5f5f5;
+  font-size: 50px;
+  margin-top: 28px;
+  width: 345px;
+}
+
+.AppTopic{
+  margin: 0 608px;
+  padding-top: 1px;
+}
+
+.AppMain{
+  min-height: 458px;
+  padding: 50px;
+}
+
+.AppOdometer{
+  font-size: 50px;
+  margin: 100px 600px;
+  width: 270px;
+}
+
+.AppButtons{
+  margin: 0 410px;
+  width: 652px;
+}
+
+.AppButton{
+  background-color: rgba(41, 41, 41, 0.9);
+  border: none;
+  border-radius: 5px;
+  color: #f5f5f5;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 18px;
+  height: 35px;
+  margin: 5px;
+  width: 150px;
+}
+.AppButton:hover{
+  background-color: rgba(66, 66, 66, 0.9);
+}
+
+.AppFooter{
+  background-color: rgba(54, 54, 54, .9);
+  height: 50px;
+  width: 100%;
+}
+
+.AppParaFooter{
+  color: #f5f5f5;
+  padding: 10px;
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +96,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
